bug fixed: minimap view jump outside the timeline width

--- a/style.css
+++ b/style.css
@@ -525,7 +525,7 @@ body {
 /* Events Layer - positioned above the timeline */
 .events-layer {
     position: absolute;
-    top: 50px;
+    top: 60px;
     left: 0;
     width: 100%;
     height: 700px;
